--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -2,24 +2,35 @@ name: Go
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
   pull_request:
-    branches: [ "main" ]
+    branches: ["main"]
+
+permissions:
+  pull-requests: write
 
 jobs:
-
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
-    - name: Set up Go
-      uses: actions/setup-go@v3
-      with:
-        go-version: 1.18
+      - name: Set up Go
+        uses: actions/setup-go@v4
+        with:
+          go-version: stable
 
-    - name: Build
-      run: go build -v ./...
+      - name: Run test
+        run: go test -v -coverprofile cover.out ./... | tee test.out
+        shell: bash
 
-    - name: Test
-      run: go test -v ./...
+      - name: Process results
+        if: always()
+        uses: malaupa/go-test-coverage-summary-action@v1.0.1
+        with:
+          test_results: "test.out"
+          coverage_profile: "cover.out"
+          with_archive: true
+
+      - name: Build
+        run: go build -v ./...
